Fix conflicts with margins and gap in CSS grids for cards

--- a/general.css
+++ b/general.css
@@ -1100,7 +1100,7 @@ footer.lightweight {
 
 /* Cards */
 .card {
-    margin: 1rem;
+    /*margin: 1rem;*/
     padding: 0.5rem;
 
     background: #fff;
